# amazon-q-poker-game

./: .gitignore  CHANGELOG.md  README.md  analyze_architecture_cards.py  analyze_cards.py  cards.csv  create_architecture_cards.py  create_cards.py  create_color_based_cards.py  create_music.py  pyproject.toml  rankings.json  run_aws_example.py  run_game.py  run_poker.py  score.txt  show_rankings.py  spec.md
Architecture-Icons/: README.md
aws_poker/: __init__.py  card.py  game.py  hand_evaluator.py  poker_game.py  sound_manager.py
aws_porker/: __init__.py  aws_game_example.py  card.py  clipboard_utils.py  example.py  game.py  poker_game.py  sound_manager.py
tests/: __init__.py  test_example.py  test_game.py
